--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center">Homemade Seaglass Curiosities</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+    Built by <a href="https:/squarish-paper.firebaseapp.com/" target="_blank">squarish-paper</a>
   </div>
 </div>
 
